--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "classnames": "^2.3.1",
     "connected-react-router": "^6.9.2",
     "date-fns": "^2.28.0",
+    "jspdf": "^2.5.0",
     "mousetrap": "1.6.5",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
@@ -25,6 +26,7 @@
     "redux": "4.1.2",
     "redux-thunk": "2.4.1",
     "reselect": "4.1.5",
+    "svg2pdf.js": "^2.2.0",
     "tslib": "2.3.1"
   },
   "scripts": {
